# ohte

./: .coveragerc  .env-d  .example.env  .gitignore  .md  README.md  asdf.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  käyttöohje.md  testausdokumentti.md  testausraportti.md  tyoaikakirjanpito.md  vaatimusmäärittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: index.py
src/entities/: image.py  memo.py  user.py
src/repositories/: MemoRepository.py  UserRepository.py  file_repository.py  image_repository.py  memo_repository.py  user_repository.py
src/services/: file_service.py  image_service.py  memo_service.py  user_service.py
src/tests/entities/: test_memo.py  test_user.py
src/tests/repositories/: test_filerepository.py  test_imagerepository.py  test_memorepository.py  test_userrepository.py
src/tests/services/: test_fileservice.py  test_imageservice.py  test_memoservice.py  test_userservice.py
src/tests/testdata/: .test.env  test1.md  test2.md  test3.md
src/tests/utils/: test_config.py  test_database_handler.py
src/ui/gui/: error_view.py  gui.py  login_view.py  memo_view.py  setup_view.py
src/ui/text_ui/: text_ui.py
src/utils/: config.py  database_handler.py  helpers.py
