[tool.poetry]
name = "Muistio"
version = "0.0.1"
description = ""
authors = ["Tuomas Alanen <tuomas@paaryna.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
