[tool.poetry]
name = "Muistio"
version = "0.0.1"
description = ""
authors = ["Tuomas Alanen <tuomas@paaryna.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.15.0"
pymongo = "^3.11.3"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
autopep8 = "^1.5.6"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
